[gd_scene load_steps=6 format=3 uid="uid://da1maj70ko8cn"]

[ext_resource type="Script" uid="uid://c5pei7expde8m" path="res://UI/shop_item.gd" id="1_m73ea"]
[ext_resource type="Texture2D" uid="uid://b668xarhovhui" path="res://Assets/Sprites/UI/Boxlet.png" id="2_m73ea"]
[ext_resource type="Texture2D" uid="uid://ccwroo4hmie11" path="res://Assets/Sprites/ShopItemIcons/BatStrengthShop.png" id="3_iusw4"]
[ext_resource type="Theme" uid="uid://bbdw604g1euhr" path="res://Themes/label.tres" id="3_oschu"]
[ext_resource type="Theme" uid="uid://cwk5duyn0sko7" path="res://Themes/button.tres" id="5_iusw4"]

[node name="ShopItem" type="VBoxContainer"]
offset_right = 19.0
offset_bottom = 40.0
script = ExtResource("1_m73ea")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("3_oschu")
theme_override_font_sizes/font_size = 6

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_iusw4")
stretch_mode = 2

[node name="Price" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="Boxlet" type="TextureRect" parent="Price"]
layout_mode = 2
texture = ExtResource("2_m73ea")
stretch_mode = 2

[node name="PriceLabel" type="Label" parent="Price"]
layout_mode = 2
theme = ExtResource("3_oschu")
theme_override_font_sizes/font_size = 8
text = " 0"

[node name="BuyButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("5_iusw4")
theme_override_font_sizes/font_size = 8
text = "buy"
